# CS-NocoDB

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.cluster-development.yml  docker-compose.cluster.yml  docker-compose.development.yml  docker-compose.local.yml  docker-compose.traefik-header-auth.yml  docker-compose.traefik-local.yml  docker-compose.traefik.yml
.github/: dependabot.yml
.github/config/docker-base-image-monitor/: base-images.json
.github/workflows/: check-base-images.yml  docker-maintenance.yml  docker-release.yml
docs/: AUDIT_CLEANUP.md  BACKUP.md  MIGRATION.md  PG_UPGRADE.md
src/nocodb/: Dockerfile
src/nocodb-backup/: Dockerfile  cli.py  config.py  main.py  requirements-test.txt  requirements.txt  scheduler.py
src/nocodb-backup/alerting/: __init__.py  base.py  email_alerter.py  manager.py  teams_alerter.py  webhook_alerter.py
src/nocodb-backup/backup/: __init__.py  file_backup.py  nocodb_exporter.py  pg_dump.py
src/nocodb-backup/plugin/: README.md  pyproject.toml
src/nocodb-backup/plugin/nocodb_backup_ext/: __init__.py  _snapshot.py  commands.py  rest_source.py
src/nocodb-backup/plugin/tests/: test_rest_source.py  test_restore_records.py  test_schema_and_attachments.py
src/nocodb-backup/storage/: __init__.py  s3_client.py
src/nocodb-backup/tests/: __init__.py  test_backup.py  test_config.py
src/nocodb-backup/ui/: __init__.py  console.py
src/nocodb-init/: Dockerfile  main.py
src/nocodb-init/tasks/: 01_collation_check.py  02_audit_cleanup.py
tools/: pg_upgrade_inplace.sh
